--- a/package.json
+++ b/package.json
@@ -9,26 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.21",
     "next": "15.2.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4.0.17",
+    "@eslint/eslintrc": "^3.3.1",
     "@types/date-fns": "^2.6.3",
     "@types/estree": "^1.0.7",
     "@types/json-schema": "^7.0.15",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
+    "@types/node": "^20.17.28",
+    "@types/react": "^19.0.12",
+    "@types/react-dom": "^19.0.4",
+    "eslint": "^9.23.0",
     "eslint-config-next": "15.2.4",
-    "tailwindcss": "^4",
-    "typescript": "^5"
+    "tailwindcss": "^4.0.17",
+    "typescript": "^5.8.2"
   },
-  "optionalDependencies": {
-    "@tailwindcss/oxide-linux-arm-gnu": "^4.0.1",
-    "lightningcss-linux-arm-gnu": "^1.29.1"
-  }
+  "optionalDependencies": {}
 }
