--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "autoprefixer": "^10.4.21",
     "next": "15.2.4",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
@@ -26,6 +27,5 @@
     "eslint-config-next": "15.2.4",
     "tailwindcss": "^4.0.17",
     "typescript": "^5.8.2"
-  },
-  "optionalDependencies": {}
+  }
 }
